# SRIMlib

./: .SRIMlibConfig.cmake.in  .clang-format  .gitignore  .thisSRIMlib.sh.in  CMakeLists.txt  README.md  clean.sh  dbinfo.txt  example.cc
SRIMoutput/: 12C6_in_Si.txt  13C6_in_Mylar.txt  13C6_in_Si.txt  14C6_in_Mylar.txt  14C6_in_Si.txt  14N7_in_Mylar.txt  14N7_in_Si.txt  15C6_in_Mylar.txt  15C6_in_Si.txt  15N7_in_Mylar.txt  15N7_in_Si.txt  1H1_in_Mylar.txt  1H1_in_Si.txt  24Mg12_in_He250torr.txt  24Mg12_in_Mylar.txt  24Mg12_in_Si.txt  25Al13_in_He250torr.txt  25Al13_in_Mylar.txt  25Al13_in_Si.txt  26Si13_in_He250torr.txt  26Si13_in_Mylar.txt  26Si13_in_Si.txt  26Si14_in_He250torr.txt  26Si14_in_Mylar.txt  26Si14_in_Si.txt  27Al13_in_He250torr.txt  27Al13_in_Si.txt  28Si14_in_He250torr.txt  28Si14_in_Si.txt  29P15_in_He250torr.txt  29P15_in_Mylar.txt  29P15_in_Si.txt  2H1_in_Mylar.txt  2H1_in_Si.txt  3H1_in_Mylar.txt  3H1_in_Si.txt  4He2_in_Mylar.txt  4He2_in_Si.txt  6He2_in_Mylar.txt  6He2_in_Si.txt  (+8 more)
include/: SRIMData.h  SRIMtable.h
init/: CMakeLists.txt  Updatedb.cc  Updatedb.h  update.cc
src/: CMakeLists.txt  SRIMData.cc  SRIMtable.cc  allinfo.cc  eloss.cc  newe.cc  olde.cc  range.cc  straggling.cc
